--- a/views/home.html
+++ b/views/home.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Mi primer documento en HTML</title>
 </head>
 
 <body>
 
 <header>
-    <div><img src="../public/images/logo-mercado-liebre.svg" alt=""></div>
+    <div><img src="images/logo-mercado-liebre.svg" alt=""></div>
     <p>Lugar para poner barra de busqueda</p>
     <p>Comprá en cuotas y sin tarjeta de crédito</p>
     <nav>
@@ -31,25 +32,25 @@
     <section>
         <h2 type="disc" >Basado en tu última visita</h2>
         <article>
-            <a href="#"><img src="../public/images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex"></a>
+            <a href="#"><img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex"></a>
             <p>$6.770</p>
             <p>40% OFF</p>
             <h3>Cafetera Moulinex</h3>
         </article>
         <article>
-            <a href="#"><img src="../public/images/img-macbook-pro-2019.jpg" alt=""></a>
+            <a href="#"><img src="/images/img-macbook-pro-2019.jpg" alt=""></a>
             <p>$230.000</p>
             <p>20% off</p>
             <h3>MacBook Pro 2019</h3>
         </article>
         <article>
-            <a href="#"><img src="../public/images/img-samsung-galaxy-s10.jpg" alt=""></a>
+            <a href="#"><img src="/images/img-samsung-galaxy-s10.jpg" alt=""></a>
             <p>$70.500</p>
             <p>10% off</p>
             <h3>Samsung Galaxy S10</h3>
         </article>
         <article>
-            <a href="#"><img src="../public/images/img-tv-samsung-smart.jpg" alt=""></a>
+            <a href="#"><img src="/images/img-tv-samsung-smart.jpg" alt=""></a>
             <p>$23.200</p>
             <p>5% off</p>
             <h3>SmartTv Samsung 43"</h3>
@@ -58,25 +59,25 @@
     <section>
         <h2 type="disc">Sección de Ofertas</h2>
         <article>
-            <a href="#"><img src="../public/images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex"></a>
+            <a href="#"><img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex"></a>
             <p>$6.770</p>
             <p>40% OFF</p>
             <h3>Cafetera Moulinex</h3>
         </article>
         <article>
-            <a href="#"><img src="../public/images/img-macbook-pro-2019.jpg" alt=""></a>
+            <a href="#"><img src="images/img-macbook-pro-2019.jpg" alt=""></a>
             <p>$230.000</p>
             <p>20% off</p>
             <h3>MacBook Pro 2019</h3>
         </article>
         <article>
-            <a href="#"><img src="../public/images/img-samsung-galaxy-s10.jpg" alt=""></a>
+            <a href="#"><img src="/images/img-samsung-galaxy-s10.jpg" alt=""></a>
             <p>$70.500</p>
             <p>10% off</p>
             <h3>Samsung Galaxy S10</h3>
         </article>
         <article>
-            <a href="#"><img src="../public/images/img-tv-samsung-smart.jpg" alt=""></a>
+            <a href="#"><img src="/images/img-tv-samsung-smart.jpg" alt=""></a>
             <p>$23.200</p>
             <p>5% off</p>
             <h3>SmartTv Samsung 43"</h3>
