--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,12 +28,28 @@
     }
 
     main{
-        width: 90vw;
+        /* width: 90vw; */
         font-size: 12px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: #ebebeb;
+
+    }
+
+    main section{
+        width: 90%;
     }
 
     article{
         margin: 10px;
+        /* border: 1px solid #ebebeb;
+        border-top: 1px solid ; */
+        background-color: white;
+    }
+
+    article div{
+        margin-top: 1px;
         border: 1px solid #ebebeb;
         padding: 15px;
     }
@@ -77,14 +93,27 @@
 
     #precio{
         font-size: 18px;
+        
+    }
+
+    .shipping-icon{
+        color:  #39b54a;
+        font-size: 1em; 
+        margin-bottom: 10px;
+        border: 2px solid #39b54a;
+            border-radius: 50%; 
+            padding: 10px;
     }
 
     #descuento{
         font-size: 16px;
+        color: #39b54a;
     }
 
     #descripcion{
         font-size: 16px;
+        padding-top: 20px;
+        color: #666;
     }
 
     #titular{
@@ -127,5 +156,53 @@
     #copyright{
         color: #666;
     }
+
+    @media screen and (max-width: 360px) {
+       
+        article #descripcion {
+            display: none; 
+        }
+        nav {
+        display: none;
+    }
+    
+    }
+
+
+    @media screen and (min-width: 361px) {
+        header img {
+            width: 30%; 
+        }
+    
+        .burger-menu {
+            padding-bottom: 15px; 
+        }
+    
+        article {
+            box-shadow: 0px 0px 10px rgb(100, 100, 100); 
+        }
+        nav {
+            display: none;
+        }
+    }
+
+    @media screen and (min-width: 769px) {
+
+        header img {
+            width: 20%; 
+        }
+    
+        .burger-menu {
+            display: none; 
+        }
+    
+        article {
+            box-shadow: 0px 0px 10px rgb(100, 100, 100); 
+        }
+
+        nav {
+            display: block;
+
+    }}
 
     
