--- a/views/home.html
+++ b/views/home.html
@@ -42,55 +42,95 @@ rel="stylesheet" />
     <section>
         <h2 type="disc" id="titular" >Basado en tu última visita</h2>
         <article>
+            <div>
             <a href="#"><img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex"></a>
+            </div>
+            <div>
+            <i class="fas fa-shipping-fast shipping-icon"></i>    
             <p id="precio">$6.770</p>
             <p id="descuento">40% OFF</p>
             <h3 id="descripcion">Cafetera Moulinex</h3>
+            </div>
         </article>
         <article>
+            <div>
             <a href="#"><img src="/images/img-macbook-pro-2019.jpg" alt=""></a>
+        </div>
+        <div>
+            <i class="fas fa-shipping-fast shipping-icon"></i>
             <p id="precio">$230.000</p>
             <p id="descuento">20% off</p>
             <h3 id="descripcion">MacBook Pro 2019</h3>
+        </div>
         </article>
         <article>
+            <div>
             <a href="#"><img src="/images/img-samsung-galaxy-s10.jpg" alt=""></a>
+        </div>
+        <div>
+            <i class="fas fa-shipping-fast shipping-icon"></i>
             <p id="precio">$70.500</p>
             <p id="descuento">10% off</p>
             <h3 id="descripcion">Samsung Galaxy S10</h3>
+        </div>
         </article>
         <article>
+            <div>
             <a href="#"><img src="/images/img-tv-samsung-smart.jpg" alt=""></a>
+        </div>
+        <div>
+            <i class="fas fa-shipping-fast shipping-icon"></i>
             <p id="precio">$23.200</p>
             <p id="descuento">5% off</p>
             <h3 id="descripcion">SmartTv Samsung 43"</h3>
+        </div>
         </article>
     </section>
     <section>
         <h2 type="disc" id="titular">Sección de Ofertas</h2>
         <article>
+            <div>
             <a href="#"><img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex"></a>
+        </div>
+        <div>
+            <i class="fas fa-shipping-fast shipping-icon"></i>
             <p id="precio">$6.770</p>
             <p id="descuento">40% OFF</p>
             <h3 id="descripcion">Cafetera Moulinex</h3>
+        </div>
         </article>
         <article>
+            <div>
             <a href="#"><img src="images/img-macbook-pro-2019.jpg" alt=""></a>
+        </div>
+        <div>
+            <i class="fas fa-shipping-fast shipping-icon"></i>
             <p id="precio">$230.000</p>
             <p id="descuento">20% off</p>
             <h3 id="descripcion">MacBook Pro 2019</h3>
+        </div>
         </article>
         <article>
+            <div>
             <a href="#"><img src="/images/img-samsung-galaxy-s10.jpg" alt=""></a>
+        </div>
+        <div>
+            <i class="fas fa-shipping-fast shipping-icon"></i>
             <p id="precio">$70.500</p>
             <p id="descuento">10% off</p>
             <h3 id="descripcion">Samsung Galaxy S10</h3>
+        </div>
         </article>
         <article>
+            <div>
             <a href="#"><img src="/images/img-tv-samsung-smart.jpg" alt=""></a>
+        </div>
+        <div>
+            <i class="fas fa-shipping-fast shipping-icon"></i>
             <p id="precio">$23.200</p>
             <p id="descuento">5% off</p>
             <h3 id="descripcion">SmartTv Samsung 43"</h3>
+        </div>
         </article>
     </section>
 
