--- a/views/home.html
+++ b/views/home.html
@@ -13,14 +13,18 @@ rel="stylesheet" />
 <body>
 
 <header>
-    <div><img src="images/logo-mercado-liebre.svg" alt=""></div>
+    <div id="headerTablet">
+    <div id="searchLogo">
+    <img src="images/logo-mercado-liebre.svg" alt="">
     <div class="search">
         <input type="text" class="search-box" placeholder="Buscar productos, marcas">
         <button class="search-button">
             <i class="fas fa-search search-icon"></i>
            </button>
     </div>
+    </div>
     <p><i class="fas fa-hand-holding-usd search-icon"></i>Comprá en cuotas y sin tarjeta de crédito</p>
+    </div>
     <nav>
         <ul type="disc" id="ul1">
             <li><a href="#">Ofertas</a></li>
@@ -39,16 +43,19 @@ rel="stylesheet" />
         </div>
 </header>
 <main>
+    <h2 type="disc" id="titular" >Basado en tu última visita</h2>
     <section>
-        <h2 type="disc" id="titular" >Basado en tu última visita</h2>
+        
         <article>
             <div>
             <a href="#"><img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex"></a>
             </div>
             <div>
             <i class="fas fa-shipping-fast shipping-icon"></i>    
+            <div id="description2">
             <p id="precio">$6.770</p>
             <p id="descuento">40% OFF</p>
+            </div>
             <h3 id="descripcion">Cafetera Moulinex</h3>
             </div>
         </article>
@@ -58,8 +65,9 @@ rel="stylesheet" />
         </div>
         <div>
             <i class="fas fa-shipping-fast shipping-icon"></i>
-            <p id="precio">$230.000</p>
+        <div id="description2"><p id="precio">$230.000</p>
             <p id="descuento">20% off</p>
+        </div>
             <h3 id="descripcion">MacBook Pro 2019</h3>
         </div>
         </article>
@@ -69,8 +77,9 @@ rel="stylesheet" />
         </div>
         <div>
             <i class="fas fa-shipping-fast shipping-icon"></i>
-            <p id="precio">$70.500</p>
+        <div id="description2"><p id="precio">$70.500</p>
             <p id="descuento">10% off</p>
+        </div>
             <h3 id="descripcion">Samsung Galaxy S10</h3>
         </div>
         </article>
@@ -80,22 +89,23 @@ rel="stylesheet" />
         </div>
         <div>
             <i class="fas fa-shipping-fast shipping-icon"></i>
-            <p id="precio">$23.200</p>
-            <p id="descuento">5% off</p>
+        <div id="description2"><p id="precio">$23.200</p>
+            <p id="descuento">5% off</p></div>
             <h3 id="descripcion">SmartTv Samsung 43"</h3>
         </div>
         </article>
     </section>
+    <h2 type="disc" id="titular">Sección de Ofertas</h2>
     <section>
-        <h2 type="disc" id="titular">Sección de Ofertas</h2>
+        
         <article>
             <div>
             <a href="#"><img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex"></a>
         </div>
         <div>
             <i class="fas fa-shipping-fast shipping-icon"></i>
-            <p id="precio">$6.770</p>
-            <p id="descuento">40% OFF</p>
+        <div id="description2"><p id="precio">$6.770</p>
+            <p id="descuento">40% OFF</p></div>
             <h3 id="descripcion">Cafetera Moulinex</h3>
         </div>
         </article>
@@ -105,8 +115,8 @@ rel="stylesheet" />
         </div>
         <div>
             <i class="fas fa-shipping-fast shipping-icon"></i>
-            <p id="precio">$230.000</p>
-            <p id="descuento">20% off</p>
+        <div id="description2"><p id="precio">$230.000</p>
+            <p id="descuento">20% off</p></div>
             <h3 id="descripcion">MacBook Pro 2019</h3>
         </div>
         </article>
@@ -116,8 +126,8 @@ rel="stylesheet" />
         </div>
         <div>
             <i class="fas fa-shipping-fast shipping-icon"></i>
-            <p id="precio">$70.500</p>
-            <p id="descuento">10% off</p>
+        <div id="description2"> <p id="precio">$70.500</p>
+            <p id="descuento">10% off</p></div>
             <h3 id="descripcion">Samsung Galaxy S10</h3>
         </div>
         </article>
@@ -127,8 +137,8 @@ rel="stylesheet" />
         </div>
         <div>
             <i class="fas fa-shipping-fast shipping-icon"></i>
-            <p id="precio">$23.200</p>
-            <p id="descuento">5% off</p>
+        <div id="description2"><p id="precio">$23.200</p>
+            <p id="descuento">5% off</p></div>
             <h3 id="descripcion">SmartTv Samsung 43"</h3>
         </div>
         </article>
