--- a/views/home.html
+++ b/views/home.html
@@ -33,8 +33,8 @@ rel="stylesheet" />
             <li><a href="#">Ayuda</a></li>
         </ul>
         <ul type="disc" id="ul2">
-            <li><a href="#">Crea tu cuenta</a><i class="fas fa-user-plus user-icon"></i></li>
-            <li><a href="#">Ingresa</a><i class="fas fa-sign-in-alt user-icon"></i></li>
+            <li><a href="/register">Crea tu cuenta</a><i class="fas fa-user-plus user-icon"></i></li>
+            <li><a href="/login">Ingresa</a><i class="fas fa-sign-in-alt user-icon"></i></li>
             <li><a href="#">Mis compras</a><i class="fas fa-shopping-cart cart-icon"></i></li>
         </ul>
     </nav>
